Update JS to fix overflow when resizing window
Change form mouseover to mouseover and mousedown

Update CSS for the above reasons

--- a/style.css
+++ b/style.css
@@ -2,30 +2,22 @@ body {
     background-color: antiquewhite;
     display: flex;
     width: 100%;
-    height: auto;
+    height: 100%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.container, .grid-container {
-    display: flex;
-    flex-wrap: wrap;
-    
-
-}
-
 .container {
+    border: 1px solid black ;
+    display: flex;
     width: 960px;
     height: 960px;
-
+    flex-wrap: wrap;
 }
-
 .grid-container {
-    border: solid black 2px;
+    border: solid black 1px;
     background-color: rgb(255, 255, 255);
-
-    
 }
 
 button {
